--- a/cncv.html
+++ b/cncv.html
@@ -179,9 +179,15 @@
         <div class="main-content">
             <div class="content">
                 <p>
-                    Hej ,
-                    Jag söker tjänsten CNC operatör , Jag har stort intresse för tekniskt och mekaniskt arbete som person är jag en samarbetsvillig , kreativ, aktiv med nogranhet och jämt fokus på mitt jobb. Jag är en social och positiv person som gillar att sprida glädje och positiv energi  till alla runt och kring mig. 
-                </p>
+                   Jag hoppas detta brev når er i bästa hälsa och högsta humör. Jag skriver till er med stor entusiasm och ett brinnande intresse för att uttrycka mitt intresse för att arbeta tillsammans med er som en CNC-operatör. Jag har hört mycket gott om ert företag och er rykte för att leverera högkvalitativa produkter och jag skulle vara hedrad att bli en del av ert team.
+
+Min passion för CNC-teknik började under min tekniska utbildning och har vuxit starkare med praktiken. . Jag har arbetat med olika material och har en bred kompetens när det gäller att ställa in och övervaka maskiner för att säkerställa att de producerar komponenter av högsta kvalitet. Min noggrannhet och förmåga att lösa problem har varit avgörande för att uppnå framgång inom mitt nuvarande arbetsområde.
+
+Jag är väl medveten om att effektivitet och noggrannhet är av största vikt inom CNC-bearbetning, och jag strävar alltid efter att uppnå högsta möjliga standarder i mitt arbete. Jag är övertygad om att min tekniska kompetens och min förmåga att anpassa mig till olika arbetsuppgifter skulle göra mig till en värdefull resurs för ert team.
+
+Jag tror också på betydelsen av säkerhet på arbetsplatsen och är medveten om de strikta säkerhetsstandarder som krävs inom CNC-bearbetning. Jag är fullt utrustad och villig att följa dessa standarder noggrant och se till att alla arbetsuppgifter utförs på ett säkert sätt.
+
+Det skulle vara en ära att få möjligheten att diskutera hur jag kan bidra till ert företags framgång och uppfylla era produktionsbehov som en CNC-operatör. Jag ser fram emot att få träffa er personligen för att diskutera min potential ytterligare och för att svara på eventuella frågor ni kan ha.
                 <h3 class="main-content-title">work experience</h3>
                 <!-- ===============  1  ================== -->
                 <div class="main-content-item">
