--- a/cncv.html
+++ b/cncv.html
@@ -179,7 +179,7 @@
         <div class="main-content">
             <div class="content">
                 <p>
-                   Jag hoppas detta brev når er i bästa hälsa och högsta humör. Jag skriver till er med stor entusiasm och ett brinnande intresse för att uttrycka mitt intresse för att arbeta tillsammans med er som en CNC-operatör. Jag har hört mycket gott om ert företag och er rykte för att leverera högkvalitativa produkter och jag skulle vara hedrad att bli en del av ert team.
+                   Hej,<br>
 
 Min passion för CNC-teknik började under min tekniska utbildning och har vuxit starkare med praktiken. . Jag har arbetat med olika material och har en bred kompetens när det gäller att ställa in och övervaka maskiner för att säkerställa att de producerar komponenter av högsta kvalitet. Min noggrannhet och förmåga att lösa problem har varit avgörande för att uppnå framgång inom mitt nuvarande arbetsområde.
 
