--- a/cncv.html
+++ b/cncv.html
@@ -181,7 +181,7 @@
                 <p>
                    Hej,<br>
 
-Min passion för CNC-teknik började under min tekniska utbildning och har vuxit starkare med praktiken. . Jag har arbetat med olika material och har en bred kompetens när det gäller att ställa in och övervaka maskiner för att säkerställa att de producerar komponenter av högsta kvalitet. Min noggrannhet och förmåga att lösa problem har varit avgörande för att uppnå framgång inom mitt nuvarande arbetsområde.
+Min passion för CNC-teknik började under min tekniska utbildning och har vuxit starkare med praktiken.  Jag har arbetat med olika material och har en bred kompetens när det gäller att ställa in och övervaka maskiner för att säkerställa att de producerar komponenter av högsta kvalitet. Min noggrannhet och förmåga att lösa problem har varit avgörande för att uppnå framgång inom mitt nuvarande arbetsområde.
 
 Jag är väl medveten om att effektivitet och noggrannhet är av största vikt inom CNC-bearbetning, och jag strävar alltid efter att uppnå högsta möjliga standarder i mitt arbete. Jag är övertygad om att min tekniska kompetens och min förmåga att anpassa mig till olika arbetsuppgifter skulle göra mig till en värdefull resurs för ert team.
 
