--- a/cncv.html
+++ b/cncv.html
@@ -75,7 +75,7 @@
         <div class="sidebar">
             <div class="sidebar-content">
                 <div id="personal-image">
-                    <img src="cvpic.jpg" alt="Personal picture of the cv owner">
+                    <img src="nesim mehdi.png" alt="Personal picture of the cv owner">
                 </div>
                 <div class="education">
                     <h3 class="sidebar-title">
