--- a/cncv.html
+++ b/cncv.html
@@ -367,7 +367,7 @@ Det skulle vara en ära att få möjligheten att diskutera hur jag kan bidra til
                     <div class="languages">
                     <ul>
                         <li><span>Svenska</span> </li>
-                        <li><span>Arabiska</span> </li>
+                       <!-- <li><span>Arabiska</span> </li> -->
                         <li><span>Engelska</span> </li>     
                     </ul>
                     </div>
