--- a/cncv.html
+++ b/cncv.html
@@ -87,7 +87,7 @@
                         <p>
                             <strong><em>Bascertifikat</em></strong> som <strong>CNC & Svets tekniker. </strong>
                             <strong>Grönt CNC-certifikat. </strong>
-                            <strong>Jag har rätt till nystarstjobb.</strong>
+                           <!-- <strong>Jag har rätt till nystarstjobb.</strong> -->
                         </p>
                     </div>
                   
